fixed a bug with body overflowing into footer

--- a/src/sass/components/_image-list.scss
+++ b/src/sass/components/_image-list.scss
@@ -7,6 +7,7 @@
   grid-auto-rows: 10px;
   border-radius: 0.5rem;
   padding: 1rem;
+  overflow: hidden;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.7),
